// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`u-table-view.vue > Demo-刚开始为空的情况 1`] = `
<div class="root" direction="vertical" type vusion-slot-name="default">
  <div class="root">
    <div class="table" position="static">
      <div class="head">
        <table class="root head-table" sticky-fixed="true" striped="true">
          <colgroup>
            <col width>
            <col width>
            <col>
            <col width>
          </colgroup>
          <thead>
            <tr>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 用户名 </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 手机号码 </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 地址 </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 最近登录时间 </span>
              </th>
            </tr>
          </thead>
        </table>
      </div>
      <div class="headPlaceholder"></div>
      <div class="body" sticky-fixed="true">
        <div class="root scrollcview">
          <div class="wrap">
            <div class="view">
              <table class="root body-table" sticky-fixed="true" striped="true">
                <colgroup>
                  <col width>
                  <col width>
                  <col>
                  <col width>
                </colgroup>
                <tbody>
                  <tr>
                    <td class="center centerSticky" colspan="4">
                      <div class="wrap" vusion-slot-name="loading">
                        <div class="root spinner"></div> 正在加载中...
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="root" style="display: none;">
      <div class="line" style="display: none;"></div>
      <div class="mask" style="display: none;"></div>
    </div>
    <div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-table-view.vue > Demo-后端排序，前端分页 1`] = `
<div class="root">
  <div class="table" position="static">
    <div class="head">
      <table class="root head-table" sticky-fixed="true" striped="true">
        <colgroup>
          <col width>
          <col width>
          <col>
          <col width>
        </colgroup>
        <thead>
          <tr>
            <th class="head-title boldHeader" sortable="sortable">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 用户名 </span>
              <span class="sort" order="asc"></span>
            </th>
            <th class="head-title boldHeader" sortable="sortable">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 手机号码 </span>
              <span class="sort" order="asc"></span>
            </th>
            <th class="head-title boldHeader">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 地址 </span>
            </th>
            <th class="head-title boldHeader" sortable="sortable">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 最近登录时间 </span>
              <span class="sort" order="asc" sorting="true"></span>
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div class="headPlaceholder"></div>
    <div class="body" sticky-fixed="true">
      <div class="root scrollcview">
        <div class="wrap">
          <div class="view">
            <table class="root body-table" sticky-fixed="true" striped="true">
              <colgroup>
                <col width>
                <col width>
                <col>
                <col width>
              </colgroup>
              <tbody>
                <tr>
                  <td class="center centerSticky" colspan="4">
                    <div class="wrap" vusion-slot-name="loading">
                      <div class="root spinner"></div> 正在加载中...
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="root" style="display: none;">
    <div class="line" style="display: none;"></div>
    <div class="mask" style="display: none;"></div>
  </div>
  <nav class="root pagination" size="normal">
    <div class="root sizer" tabindex="0">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;">请选择</span>
      <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
        10条/页
      </div>
      <transition-stub class="popper" name="fade" style="width: 100%;">
        <div class="root" style="display: none;">
          <div class="wrap">
            <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
              10条/页
            </div>
            <div class="root" style="direction: ltr;" vusion-slot-name="default">
              20条/页
            </div>
            <div class="root" style="direction: ltr;" vusion-slot-name="default">
              50条/页
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
    <a class="item-wrap" disabled="disabled">
      <i class="item" role="prev"></i>
    </a>
    <a class="item" selected="selected">1</a>
    <a class="item-wrap" disabled="disabled">
      <i class="item" role="next"></i>
    </a>
  </nav>
  <div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
  </div>
</div>
`;

exports[`u-table-view.vue > Demo-普通数据表格 1`] = `
<div class="root">
  <div class="table" position="static">
    <div class="head">
      <table class="root head-table" sticky-fixed="true" style="width: 0px;">
        <colgroup></colgroup>
        <thead></thead>
      </table>
    </div>
    <div class="headPlaceholder"></div>
    <div class="body" sticky-fixed="true">
      <div class="root scrollcview">
        <div class="wrap">
          <div class="view">
            <table class="root body-table" sticky-fixed="true" style="width: 0px;">
              <colgroup></colgroup>
              <tbody>
                <tr>
                  <td class="center centerSticky" colspan="0">
                    <div class="wrap" vusion-slot-name="loading">
                      <div class="root spinner"></div> 正在加载中...
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="root" style="display: none;">
    <div class="line" style="display: none;"></div>
    <div class="mask" style="display: none;"></div>
  </div>
  <div></div>
</div>
`;

exports[`u-table-view.vue > Demo-纯前端过滤 1`] = `
<div class="root">
  <div class="table" position="static">
    <div class="head">
      <table class="root head-table" sticky-fixed="true" striped="true">
        <colgroup>
          <col width>
          <col width>
          <col>
          <col width>
        </colgroup>
        <thead>
          <tr>
            <th class="head-title boldHeader" sortable="sortable">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 用户名 </span>
              <span class="sort"></span>
            </th>
            <th class="head-title boldHeader" sortable="sortable">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 手机号码 </span>
              <span class="sort"></span>
            </th>
            <th class="head-title boldHeader" filterable="true">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 地址 </span>
              <span active="true" class="filter-wrap"><transition-stub class="root" name="fade">
                  <div class="root" style="display: none;">
                    <div class="root scrollview" trigger="hover">
                      <div class="wrap">
                        <div class="view">
                          <div class="wrap">
                            <div>
                              <div class="root" index="0">全部</div>
                              <div class="root" index="1" selected="selected">网易大厦</div>
                              <div class="root" index="2">网易二期</div>
                              <div class="root" index="3">英飞特科技园</div>
                              <div class="root" index="4">西可科技园</div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </transition-stub></span>
            </th>
            <th class="head-title boldHeader" sortable="sortable">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 最近登录时间 </span>
              <span class="sort"></span>
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div class="headPlaceholder"></div>
    <div class="body" sticky-fixed="true">
      <div class="root scrollcview">
        <div class="wrap">
          <div class="view">
            <table class="root body-table" sticky-fixed="true" striped="true">
              <colgroup>
                <col width>
                <col width>
                <col>
                <col width>
              </colgroup>
              <tbody>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-0</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917895</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-05-28 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-5</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917900</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-02 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-10</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917905</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-07 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-15</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917910</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-12 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-20</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917915</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-17 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-25</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917920</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-22 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-30</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917925</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-27 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-35</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917930</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-07-02 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-40</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917935</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-07-07 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-45</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917940</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-07-12 21:52:11</span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="root" style="display: none;">
    <div class="line" style="display: none;"></div>
    <div class="mask" style="display: none;"></div>
  </div>
  <nav class="root pagination" size="normal">
    <div class="root sizer" tabindex="0">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;">请选择</span>
      <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
        10条/页
      </div>
      <transition-stub class="popper" name="fade" style="width: 100%;">
        <div class="root" style="display: none;">
          <div class="wrap">
            <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
              10条/页
            </div>
            <div class="root" style="direction: ltr;" vusion-slot-name="default">
              20条/页
            </div>
            <div class="root" style="direction: ltr;" vusion-slot-name="default">
              50条/页
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
    <a class="item-wrap" disabled="disabled">
      <i class="item" role="prev"></i>
    </a>
    <a class="item" selected="selected">1</a>
    <a class="item">2</a>
    <a class="item-wrap">
      <i class="item" role="next"></i>
    </a>
  </nav>
  <div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
  </div>
</div>
`;

exports[`u-table-view.vue > Demo-纯数组前端分页 1`] = `
<div class="root">
  <div class="table" position="static">
    <div class="head">
      <table class="root head-table" sticky-fixed="true" striped="true">
        <colgroup>
          <col width>
          <col width>
          <col>
          <col width>
        </colgroup>
        <thead>
          <tr>
            <th class="head-title boldHeader">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 用户名 </span>
            </th>
            <th class="head-title boldHeader">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 手机号码 </span>
            </th>
            <th class="head-title boldHeader">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 地址 </span>
            </th>
            <th class="head-title boldHeader">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 最近登录时间 </span>
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div class="headPlaceholder"></div>
    <div class="body" sticky-fixed="true">
      <div class="root scrollcview">
        <div class="wrap">
          <div class="view">
            <table class="root body-table" sticky-fixed="true" striped="true">
              <colgroup>
                <col width>
                <col width>
                <col>
                <col width>
              </colgroup>
              <tbody>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-0</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917895</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-05-28 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">小明-1</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">13727160284</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2019-03-13 22:24:36</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">李四-2</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18897127811</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2019-05-20 15:45:30</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">李华-3</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18749261217</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区长河路590号东忠科技园</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-12-13 15:48:01</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">王五-4</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">13579340024</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-07-20 01:32:06</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-5</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917900</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-02 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">小明-6</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">13727160289</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2019-03-18 22:24:36</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">李四-7</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18897127816</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2019-05-25 15:45:30</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">李华-8</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18749261222</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区长河路590号东忠科技园</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-12-18 15:48:01</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">王五-9</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">13579340029</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-07-25 01:32:06</span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="root" style="display: none;">
    <div class="line" style="display: none;"></div>
    <div class="mask" style="display: none;"></div>
  </div>
  <nav class="root pagination" size="normal">
    <div class="root sizer" tabindex="0">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;">请选择</span>
      <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
        10条/页
      </div>
      <transition-stub class="popper" name="fade" style="width: 100%;">
        <div class="root" style="display: none;">
          <div class="wrap">
            <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
              10条/页
            </div>
            <div class="root" style="direction: ltr;" vusion-slot-name="default">
              20条/页
            </div>
            <div class="root" style="direction: ltr;" vusion-slot-name="default">
              50条/页
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
    <a class="item-wrap" disabled="disabled">
      <i class="item" role="prev"></i>
    </a>
    <a class="item" selected="selected">1</a>
    <a class="item">2</a>
    <a class="item">3</a>
    <a class="item">4</a>
    <a class="item">5</a>
    <a class="item" role="blank">...</a>
    <a class="item">7</a>
    <a class="item">8</a>
    <a class="item-wrap">
      <i class="item" role="next"></i>
    </a>
  </nav>
  <div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
  </div>
</div>
`;

exports[`u-table-view.vue > Demo-纯数组前端排序 1`] = `
<div class="root">
  <div class="table" position="static">
    <div class="head">
      <table class="root head-table" sticky-fixed="true" striped="true">
        <colgroup>
          <col width>
          <col width>
          <col>
          <col width>
        </colgroup>
        <thead>
          <tr>
            <th class="head-title boldHeader" sortable="sortable">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 用户名 </span>
              <span class="sort" order="asc"></span>
            </th>
            <th class="head-title boldHeader" sortable="sortable">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 手机号码 </span>
              <span class="sort" order="asc"></span>
            </th>
            <th class="head-title boldHeader">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 地址 </span>
            </th>
            <th class="head-title boldHeader" sortable="sortable">
              <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 最近登录时间 </span>
              <span class="sort" order="asc" sorting="true"></span>
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div class="headPlaceholder"></div>
    <div class="body" sticky-fixed="true">
      <div class="root scrollcview">
        <div class="wrap">
          <div class="view">
            <table class="root body-table" sticky-fixed="true" striped="true">
              <colgroup>
                <col width>
                <col width>
                <col>
                <col width>
              </colgroup>
              <tbody>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-0</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917895</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-05-28 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-5</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917900</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-02 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-10</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917905</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-07 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-15</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917910</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-12 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-20</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917915</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-17 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-25</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917920</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-22 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-30</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917925</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-06-27 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-35</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917930</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-07-02 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-40</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917935</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-07-07 21:52:11</span>
                  </td>
                </tr>
                <tr class="row">
                  <td class="cell">
                    <span class="column-field">张三-45</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">18612917940</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                  </td>
                  <td class="cell">
                    <span class="column-field">2018-07-12 21:52:11</span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="root" style="display: none;">
    <div class="line" style="display: none;"></div>
    <div class="mask" style="display: none;"></div>
  </div>
  <nav class="root pagination" size="normal">
    <div class="root sizer" tabindex="0">
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;">请选择</span>
      <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
        10条/页
      </div>
      <transition-stub class="popper" name="fade" style="width: 100%;">
        <div class="root" style="display: none;">
          <div class="wrap">
            <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
              10条/页
            </div>
            <div class="root" style="direction: ltr;" vusion-slot-name="default">
              20条/页
            </div>
            <div class="root" style="direction: ltr;" vusion-slot-name="default">
              50条/页
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
    <a class="item-wrap" disabled="disabled">
      <i class="item" role="prev"></i>
    </a>
    <a class="item" selected="selected">1</a>
    <a class="item">2</a>
    <a class="item">3</a>
    <a class="item">4</a>
    <a class="item">5</a>
    <a class="item" role="blank">...</a>
    <a class="item">7</a>
    <a class="item">8</a>
    <a class="item-wrap">
      <i class="item" role="next"></i>
    </a>
  </nav>
  <div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
    <div style="display: none;">
    </div>
  </div>
</div>
`;

exports[`u-table-view.vue > Demo-表头文字省略展示 1`] = `
<div>
  <div class="root" direction="vertical" type vusion-slot-name="default">
    <div class="root">
      <div class="table" position="static">
        <div class="head">
          <table class="root head-table" line="horizontal" sticky-fixed="true" striped="true">
            <colgroup>
              <col width>
              <col width>
              <col>
              <col width>
              <col>
              <col>
            </colgroup>
            <thead>
              <tr>
                <th class="head-title boldHeader" rowspan="2">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 序号 </span>
                </th>
                <th class="head-title boldHeader" ellipsis="true" rowspan="2">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 这是一个很长很长很长很长很长很长很长很长的名字 </span>
                </th>
                <th class="head-title boldHeader" rowspan="2">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 地址 </span>
                </th>
                <th class="head-title boldHeader" ellipsis="true" rowspan="2">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 这是一个很长很长很长很长很长很长很长很长的出生日期 </span>
                </th>
                <th class="head-title boldHeader" colspan="2" ellipsis="true">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 用户信息用户信息用户信息用户信息用户信息用户信息用户信息 </span>
                </th>
              </tr>
              <tr>
                <th class="head-title boldHeader">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 用户名 </span>
                </th>
                <th class="head-title boldHeader">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 手机号码 </span>
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div class="headPlaceholder"></div>
        <div class="body" sticky-fixed="true">
          <div class="root scrollcview">
            <div class="wrap">
              <div class="view">
                <table class="root body-table" line="horizontal" sticky-fixed="true" striped="true">
                  <colgroup>
                    <col width>
                    <col width>
                    <col>
                    <col width>
                    <col>
                    <col>
                  </colgroup>
                  <tbody>
                    <tr class="row">
                      <td class="cell" ellipsis="true">
                        <span class="column-field">1</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">张三张三张三张三张三张三张三张三张三张三</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">19910528</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">张三张三张三张三张三张三张三张三张三张三</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">-</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell" ellipsis="true">
                        <span class="column-field">2</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">小明</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">浙江省杭州市滨江区江虹路459号英飞特科技园浙江省杭州市滨江区江虹路459号英飞特科技园浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">19920914</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">小明</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">-</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell" ellipsis="true">
                        <span class="column-field">3</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">李四李四李四李四李四李四李四李四李四李四</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">19900228</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">李四李四李四李四李四李四李四李四李四李四</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">-</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell" ellipsis="true">
                        <span class="column-field">4</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">李华</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">浙江省杭州市滨江区长河路590号东忠科技园</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">19891210</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">李华</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">-</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell" ellipsis="true">
                        <span class="column-field">5</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">王五</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">19930716</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">王五</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">-</span>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="root" style="display: none;">
        <div class="line" style="display: none;"></div>
        <div class="mask" style="display: none;"></div>
      </div>
      <div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
          <div>
            <div style="display: none;">
            </div>
            <div style="display: none;">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="table" position="static">
        <div class="head">
          <table class="root head-table" line="true" sticky-fixed="true" striped="true">
            <colgroup>
              <col width>
              <col width>
              <col>
              <col width>
            </colgroup>
            <thead>
              <tr>
                <th class="head-title boldHeader">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 这是一个很长很长很长很长很长很长很长很长的名字 </span>
                </th>
                <th class="head-title boldHeader" ellipsis="true">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 这是一个很长很长很长很长很长很长很长很长的手机号码 </span>
                </th>
                <th class="head-title boldHeader" ellipsis="true">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                    <span class="root" vusion-slot-name-edit="text">这是一个很长很长很长很长很长很长很长很长的更新时间</span>
                  </span>
                </th>
                <th class="head-title boldHeader" ellipsis="true">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 最近登录时间 </span>
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div class="headPlaceholder"></div>
        <div class="body" sticky-fixed="true">
          <div class="root scrollcview">
            <div class="wrap">
              <div class="view">
                <table class="root body-table" line="true" sticky-fixed="true" striped="true">
                  <colgroup>
                    <col width>
                    <col width>
                    <col>
                    <col width>
                  </colgroup>
                  <tbody>
                    <tr class="row">
                      <td class="cell">
                        <span class="column-field">这是一个很长很长很长很长很长很长很长很长的名字</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">18612917895</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">2018-05-28 21:52:11</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell">
                        <span class="column-field">小明</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">13727160283</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">浙江省杭州市滨江区江虹路459号英飞特科技园浙江省杭州市滨江区江虹路459号英飞特科技园浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">2019-03-12 22:24:36</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell">
                        <span class="column-field">名字就是起得这么这么这么这么这么这么长</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">18897127809</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">2019-05-18 15:45:30</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell">
                        <span class="column-field">李华</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">18749261214</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">浙江省杭州市滨江区长河路590号东忠科技园</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">2018-12-10 15:48:01</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell">
                        <span class="column-field">王五</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">13579340020</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">2018-07-16 01:32:06</span>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="root" style="display: none;">
        <div class="line" style="display: none;"></div>
        <div class="mask" style="display: none;"></div>
      </div>
      <div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
      </div>
    </div>
    <div class="root">
      <div class="table" position="static">
        <div class="head">
          <table class="root head-table" line="true" sticky-fixed="true" striped="true">
            <colgroup>
              <col width>
              <col width>
              <col>
              <col width>
              <col>
              <col>
            </colgroup>
            <thead>
              <tr>
                <th class="head-title boldHeader" rowspan="2">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 这是一个很长很长很长很长很长很长很长很长的名字 </span>
                </th>
                <th class="head-title boldHeader" ellipsis="true" rowspan="2">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 这是一个很长很长很长很长很长很长很长很长的手机号码 </span>
                </th>
                <th class="head-title boldHeader" ellipsis="true" rowspan="2">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                    <span class="root" vusion-slot-name-edit="text">这是一个很长很长很长很长很长很长很长很长的更新时间</span>
                  </span>
                </th>
                <th class="head-title boldHeader" ellipsis="true" rowspan="2">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 最近登录时间 </span>
                </th>
                <th class="head-title boldHeader" colspan="2" ellipsis="true">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 用户信息用户信息用户信息用户信息用户信息用户信息用户信息 </span>
                </th>
              </tr>
              <tr>
                <th class="head-title boldHeader" ellipsis="true">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 用户名 </span>
                </th>
                <th class="head-title boldHeader" ellipsis="true">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 手机号码 </span>
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div class="headPlaceholder"></div>
        <div class="body" sticky-fixed="true">
          <div class="root scrollcview">
            <div class="wrap">
              <div class="view">
                <table class="root body-table" line="true" sticky-fixed="true" striped="true">
                  <colgroup>
                    <col width>
                    <col width>
                    <col>
                    <col width>
                    <col>
                    <col>
                  </colgroup>
                  <tbody>
                    <tr class="row">
                      <td class="cell" ellipsis="true">
                        <span class="column-field">这是一个很长很长很长很长很长很长很长很长的名字</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">18612917895</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">2018-05-28 21:52:11</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">这是一个很长很长很长很长很长很长很长很长的名字</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">18612917895</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell" ellipsis="true">
                        <span class="column-field">小明</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">13727160283</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">浙江省杭州市滨江区江虹路459号英飞特科技园浙江省杭州市滨江区江虹路459号英飞特科技园浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">2019-03-12 22:24:36</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">小明</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">13727160283</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell" ellipsis="true">
                        <span class="column-field">名字就是起得这么这么这么这么这么这么长</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">18897127809</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">2019-05-18 15:45:30</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">名字就是起得这么这么这么这么这么这么长</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">18897127809</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell" ellipsis="true">
                        <span class="column-field">李华</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">18749261214</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">浙江省杭州市滨江区长河路590号东忠科技园</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">2018-12-10 15:48:01</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">李华</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">18749261214</span>
                      </td>
                    </tr>
                    <tr class="row">
                      <td class="cell" ellipsis="true">
                        <span class="column-field">王五</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">13579340020</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">2018-07-16 01:32:06</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">王五</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">13579340020</span>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="root" style="display: none;">
        <div class="line" style="display: none;"></div>
        <div class="mask" style="display: none;"></div>
      </div>
      <div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
          <div>
            <div style="display: none;">
            </div>
            <div style="display: none;">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="table" position="static">
        <div class="head">
          <table class="root head-table" sticky-fixed="true">
            <colgroup>
              <col width>
              <col width>
              <col>
              <col width>
            </colgroup>
            <thead>
              <tr>
                <th class="head-title boldHeader" ellipsis="true" sortable="sortable">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 用户名 </span>
                  <span class="sort" order="asc"></span>
                </th>
                <th class="head-title boldHeader" ellipsis="true" sortable="sortable">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 这是一个很长很长很长很长很长很长很长很长的手机号码 </span>
                  <span class="sort" order="asc"></span>
                </th>
                <th class="head-title boldHeader" ellipsis="true" filterable="true">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 这是一个很长很长很长很长很长很长很长很长的地址 </span>
                  <span active="true" class="filter-wrap"><transition-stub class="root" name="fade">
                      <div class="root" style="display: none;">
                        <div class="root scrollview" trigger="hover">
                          <div class="wrap">
                            <div class="view">
                              <div class="wrap">
                                <div>
                                  <div class="root" index="0">全部</div>
                                  <div class="root" index="1" selected="selected">网易大厦</div>
                                  <div class="root" index="2">网易二期</div>
                                  <div class="root" index="3">英飞特科技园</div>
                                  <div class="root" index="4">西可科技园</div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </transition-stub></span>
                </th>
                <th class="head-title boldHeader" ellipsis="true" sortable="sortable">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 最近登录时间 </span>
                  <span class="sort" order="asc" sorting="true"></span>
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div class="headPlaceholder"></div>
        <div class="body" sticky-fixed="true">
          <div class="root scrollcview">
            <div class="wrap">
              <div class="view">
                <table class="root body-table" sticky-fixed="true">
                  <colgroup>
                    <col width>
                    <col width>
                    <col>
                    <col width>
                  </colgroup>
                  <tbody>
                    <tr class="row">
                      <td class="cell">
                        <span class="column-field">这是一个很长很长很长很长很长很长很长很长的名字</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">18612917895</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                      </td>
                      <td class="cell">
                        <span class="column-field">2018-05-28 21:52:11</span>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="root" style="display: none;">
        <div class="line" style="display: none;"></div>
        <div class="mask" style="display: none;"></div>
      </div>
      <div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
      </div>
    </div>
    <div class="root">
      <div class="table" position="static">
        <div class="head">
          <table class="root head-table" sticky-fixed="true">
            <colgroup>
              <col width>
              <col width>
              <col>
              <col width>
              <col>
            </colgroup>
            <thead>
              <tr>
                <th class="head-title boldHeader" ellipsis="true" sortable="sortable">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 用户名 </span>
                  <span class="sort" order="asc"></span>
                </th>
                <th class="head-title boldHeader" ellipsis="true" sortable="sortable">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 这是一个很长很长很长很长很长很长很长很长的手机号码 </span>
                  <span class="sort" order="asc"></span>
                </th>
                <th class="head-title boldHeader" ellipsis="true" filterable="true" sortable="sortable">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 这是一个很长很长很长很长很长很长很长很长的地址 </span>
                  <span class="sort" order="asc"></span>
                  <span active="true" class="filter-wrap"><transition-stub class="root" name="fade">
                      <div class="root" style="display: none;">
                        <div class="root scrollview" trigger="hover">
                          <div class="wrap">
                            <div class="view">
                              <div class="wrap">
                                <div>
                                  <div class="root" index="0">全部</div>
                                  <div class="root" index="1" selected="selected">网易大厦</div>
                                  <div class="root" index="2">网易二期</div>
                                  <div class="root" index="3">英飞特科技园</div>
                                  <div class="root" index="4">西可科技园</div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </transition-stub></span>
                </th>
                <th class="head-title boldHeader" ellipsis="true" sortable="sortable">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 最近登录时间 </span>
                  <span class="sort" order="asc" sorting="true"></span>
                </th>
                <th class="head-title boldHeader" colspan="1" ellipsis="true">
                  <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title">
                    <span class="root" vusion-slot-name-edit="text">这是个很长很长很长很长很长很长的动态列名称</span>
                  </span>
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div class="headPlaceholder"></div>
        <div class="body" sticky-fixed="true">
          <div class="root scrollcview">
            <div class="wrap">
              <div class="view">
                <table class="root body-table" sticky-fixed="true">
                  <colgroup>
                    <col width>
                    <col width>
                    <col>
                    <col width>
                    <col>
                  </colgroup>
                  <tbody>
                    <tr class="row">
                      <td class="cell" ellipsis="true">
                        <span class="column-field">这是一个很长很长很长很长很长很长很长很长的名字</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">18612917895</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="column-field">2018-05-28 21:52:11</span>
                      </td>
                      <td class="cell" ellipsis="true">
                        <span class="root" vusion-slot-name-edit="text">这是一个很长很长很长很长很长很长很长很长的名字 这是个很长很长很长很长很长很长的动态列名称</span>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="root" style="display: none;">
        <div class="line" style="display: none;"></div>
        <div class="mask" style="display: none;"></div>
      </div>
      <div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
        <div style="display: none;">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-table-view.vue > Demo-默认多行显示 1`] = `
<div>
  <div class="root">
    <div class="table" position="static">
      <div class="head">
        <table class="root head-table" line="horizontal" sticky-fixed="true" striped="true">
          <colgroup>
            <col width>
            <col width>
            <col>
            <col width>
          </colgroup>
          <thead>
            <tr>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 序号 </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 姓名 </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 地址 </span>
              </th>
              <th class="head-title boldHeader">
                <span class="column-title" vusion-slot-name="title" vusion-slot-name-edit="title"> 出生日期 </span>
              </th>
            </tr>
          </thead>
        </table>
      </div>
      <div class="headPlaceholder"></div>
      <div class="body" sticky-fixed="true">
        <div class="root scrollcview">
          <div class="wrap">
            <div class="view">
              <table class="root body-table" line="horizontal" sticky-fixed="true" striped="true">
                <colgroup>
                  <col width>
                  <col width>
                  <col>
                  <col width>
                </colgroup>
                <tbody>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field">1</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">张三张三张三张三张三张三张三张三张三张三</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">19910528</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field">2</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">小明</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">浙江省杭州市滨江区江虹路459号英飞特科技园浙江省杭州市滨江区江虹路459号英飞特科技园浙江省杭州市滨江区江虹路459号英飞特科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">19920914</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field">3</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">李四李四李四李四李四李四李四李四李四李四</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">浙江省杭州市滨江区秋溢路606号西可科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">19900228</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field">4</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">李华</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">浙江省杭州市滨江区长河路590号东忠科技园</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">19891210</span>
                    </td>
                  </tr>
                  <tr class="row">
                    <td class="cell">
                      <span class="column-field">5</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">王五</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">浙江省杭州市滨江区网商路599号网易大厦二期</span>
                    </td>
                    <td class="cell">
                      <span class="column-field">19930716</span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="root" style="display: none;">
      <div class="line" style="display: none;"></div>
      <div class="mask" style="display: none;"></div>
    </div>
    <div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
      <div style="display: none;">
      </div>
    </div>
  </div>
</div>
`;
